fix gap

--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ button {
   flex: 1;
   display: flex;
   flex-direction: column;
-  gap: 48px;
+  gap: 1.5rem;
 
   h2 {
     margin-bottom: 4px;
@@ -105,6 +105,7 @@ button {
 @media (min-width: 48rem) {
 	.boards {
 		flex-direction: row;
+		gap: 3rem;
 	}
 }
 
